Create a json response at the end of execution. Fix the Locators for form submission and successfull page. Refactoring and improvements

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 
-python_files = tests.py test_main.py test_array_main.py
+python_files = tests.py test_main.py
 ; pytest test_main.py --log-file report/LOG_$(date '+%F_%S:%M:%H').log --html=report/HTML_REPORT_$(date '+%F_%S:%M:%H')/report.html
 log_cli = true
 log_cli_format = "%(message)s"
