--- a/requirements_old.txt
+++ b/requirements_old.txt
@@ -6,33 +6,21 @@ astor==0.8.1
 async-generator==1.10
 attrs==21.4.0
 autopep8==1.6.0
-Babel==2.9.1
 backcall==0.2.0
-bcrypt==3.2.0
 bleach==4.1.0
-cached-property==1.5.2
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
 colorama==0.4.4
 configparser==5.2.0
 contextlib2==21.6.0
-coverage==6.2
 crayons==0.4.0
-credentials==1.1
-cryptography==36.0.2
 cycler==0.11.0
 Cython==0.29.28
 dataclasses==0.8
 decorator==5.1.1
 defusedxml==0.7.1
-distro==1.7.0
-docker==5.0.3
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
 entrypoints==0.4
-execnet==1.9.0
 gast==0.2.2
 google-pasta==0.2.0
 grpcio==1.44.0
@@ -40,15 +28,12 @@ h5py==2.10.0
 idna==3.3
 importlib-metadata==4.8.3
 iniconfig==1.1.1
-install==1.3.5
 ipykernel==5.5.6
 ipython==7.16.3
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
-iso8601==1.0.2
 jedi==0.17.2
 Jinja2==3.0.3
-jsonlines==3.0.0
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.12
@@ -56,6 +41,8 @@ jupyter-console==6.4.2
 jupyter-core==4.9.2
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.2
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 lxml==4.8.0
 Markdown==3.3.6
@@ -68,15 +55,15 @@ mypy-extensions==0.4.3
 nbclient==0.5.1
 nbconvert==6.0.7
 nbformat==5.1.3
-nbval==0.9.6
 nest-asyncio==1.5.4
 notebook==6.4.9
 numpy==1.18.5
+object-detection==0.0.3
+opencv-python==4.5.5.64
 opt-einsum==3.3.0
 packaging==21.3
 pandas==0.25.3
 pandocfilters==1.5.0
-paramiko==2.10.3
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -90,30 +77,30 @@ py==1.11.0
 pycodestyle==2.8.0
 pycparser==2.21
 Pygments==2.11.2
-PyNaCl==1.5.0
 pyparsing==2.4.7
+PyQt5==5.15.6
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.1
 pyrsistent==0.18.0
 pytest==7.0.1
-pytest-cov==3.0.0
-pytest-forked==1.4.0
-pytest-xdist==2.5.0
 python-dateutil==2.8.2
-python-dotenv==0.20.0
-pytimeparse==1.1.8
 pytz==2021.3
-PyYAML==5.4.1
 pyzmq==22.3.0
 qtconsole==5.2.2
+QtPy==2.0.1
 requests==2.27.1
 scipy==1.5.4
 selenium==3.141.0
 Send2Trash==1.8.0
 sip==6.5.1
 six==1.16.0
+tensorboard==1.15.0
+tensorflow==1.15.5
+tensorflow-estimator==1.15.1
 termcolor==1.1.0
 terminado==0.12.1
 testpath==0.6.0
-texttable==1.6.4
+tf-slim==1.1.0
 toml==0.10.2
 tomli==1.2.3
 tornado==6.1
@@ -125,9 +112,7 @@ urllib3==1.26.8
 wcwidth==0.2.5
 webdriver-manager==3.5.3
 webencodings==0.5.1
-websocket-client==0.59.0
 Werkzeug==2.0.3
 widgetsnbextension==3.5.2
 wrapt==1.14.0
 zipp==3.6.0
-zulu==2.0.0
